--- a/lab-2.ipynb
+++ b/lab-2.ipynb
@@ -323,7 +323,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.8.13 ('intro-ai')",
    "language": "python",
    "name": "python3"
   },
@@ -337,12 +337,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "8aa6e3026fa60eea343972c21fc82c69c8db4bc34140c207539f4de9f469798c"
    }
   }
  },
