--- a/lab-2.ipynb
+++ b/lab-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +36,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1304</th>\n",
+       "      <td>1305</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Spector, Mr. Woolf</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A.5. 3236</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1305</th>\n",
+       "      <td>1306</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Oliva y Ocana, Dona. Fermina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17758</td>\n",
+       "      <td>108.9000</td>\n",
+       "      <td>C105</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1306</th>\n",
+       "      <td>1307</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Saether, Mr. Simon Sivertsen</td>\n",
+       "      <td>male</td>\n",
+       "      <td>38.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SOTON/O.Q. 3101262</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1307</th>\n",
+       "      <td>1308</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Ware, Mr. Frederick</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>359309</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1308</th>\n",
+       "      <td>1309</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Peter, Master. Michael J</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2668</td>\n",
+       "      <td>22.3583</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1309 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      PassengerId  Pclass                                               Name  \\\n",
+       "0               1       3                            Braund, Mr. Owen Harris   \n",
+       "1               2       1  Cumings, Mrs. John Bradley (Florence Briggs Th...   \n",
+       "2               3       3                             Heikkinen, Miss. Laina   \n",
+       "3               4       1       Futrelle, Mrs. Jacques Heath (Lily May Peel)   \n",
+       "4               5       3                           Allen, Mr. William Henry   \n",
+       "...           ...     ...                                                ...   \n",
+       "1304         1305       3                                 Spector, Mr. Woolf   \n",
+       "1305         1306       1                       Oliva y Ocana, Dona. Fermina   \n",
+       "1306         1307       3                       Saether, Mr. Simon Sivertsen   \n",
+       "1307         1308       3                                Ware, Mr. Frederick   \n",
+       "1308         1309       3                           Peter, Master. Michael J   \n",
+       "\n",
+       "         Sex   Age  SibSp  Parch              Ticket      Fare Cabin Embarked  \n",
+       "0       male  22.0      1      0           A/5 21171    7.2500   NaN        S  \n",
+       "1     female  38.0      1      0            PC 17599   71.2833   C85        C  \n",
+       "2     female  26.0      0      0    STON/O2. 3101282    7.9250   NaN        S  \n",
+       "3     female  35.0      1      0              113803   53.1000  C123        S  \n",
+       "4       male  35.0      0      0              373450    8.0500   NaN        S  \n",
+       "...      ...   ...    ...    ...                 ...       ...   ...      ...  \n",
+       "1304    male   NaN      0      0           A.5. 3236    8.0500   NaN        S  \n",
+       "1305  female  39.0      0      0            PC 17758  108.9000  C105        C  \n",
+       "1306    male  38.5      0      0  SOTON/O.Q. 3101262    7.2500   NaN        S  \n",
+       "1307    male   NaN      0      0              359309    8.0500   NaN        S  \n",
+       "1308    male   NaN      1      1                2668   22.3583   NaN        C  \n",
+       "\n",
+       "[1309 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "263"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df[\"Age\"].isnull().sum()\n"
    ]
@@ -60,10 +300,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ammount of Nan Values in Age Series: 263\n"
+     ]
+    }
+   ],
    "source": [
     "# chekcing NaN for age\n",
     "\n",
@@ -74,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,9 +340,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ammount of Nan Values in Age Series after fillna: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Checking that fillna worked\n",
     "ageNa = df[\"Age\"].isnull().sum()\n",
@@ -99,12 +360,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1309 entries, 0 to 1308\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  1309 non-null   int64  \n",
+      " 1   Pclass       1309 non-null   int64  \n",
+      " 2   Name         1309 non-null   object \n",
+      " 3   Sex          1309 non-null   object \n",
+      " 4   Age          1309 non-null   int64  \n",
+      " 5   SibSp        1309 non-null   int64  \n",
+      " 6   Parch        1309 non-null   int64  \n",
+      " 7   Ticket       1309 non-null   object \n",
+      " 8   Fare         1308 non-null   float64\n",
+      " 9   Cabin        295 non-null    object \n",
+      " 10  Embarked     1307 non-null   object \n",
+      " 11  Title        1309 non-null   object \n",
+      " 12  First Name   1309 non-null   object \n",
+      " 13  Last Name    1309 non-null   object \n",
+      "dtypes: float64(1), int64(5), object(8)\n",
+      "memory usage: 143.3+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "# Confirming that the typecast worked\n",
-    "df.info()"
+    "df.info()\n"
    ]
   },
   {
@@ -116,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,16 +428,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                 braund, mr. owen harris\n",
+       "1       cumings, mrs. john bradley (florence briggs th...\n",
+       "2                                  heikkinen, miss. laina\n",
+       "3            futrelle, mrs. jacques heath (lily may peel)\n",
+       "4                                allen, mr. william henry\n",
+       "                              ...                        \n",
+       "1304                                   spector, mr. woolf\n",
+       "1305                         oliva y ocana, dona. fermina\n",
+       "1306                         saether, mr. simon sivertsen\n",
+       "1307                                  ware, mr. frederick\n",
+       "1308                             peter, master. michael j\n",
+       "Name: Name, Length: 1309, dtype: object"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df[\"Name\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,9 +468,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " mr          757\n",
+       " miss        260\n",
+       " mrs         197\n",
+       " master       61\n",
+       " rev           8\n",
+       " dr            8\n",
+       " col           4\n",
+       " mlle          2\n",
+       " major         2\n",
+       " ms            2\n",
+       " lady          1\n",
+       " sir           1\n",
+       " mme           1\n",
+       " don           1\n",
+       " capt          1\n",
+       " countess      1\n",
+       " jonkheer      1\n",
+       " dona          1\n",
+       "Name: Title, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df[\"Title\"].value_counts()"
    ]
@@ -173,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,21 +549,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          braund\n",
+       "1         cumings\n",
+       "2       heikkinen\n",
+       "3        futrelle\n",
+       "4           allen\n",
+       "          ...    \n",
+       "1304      spector\n",
+       "1305    Undefined\n",
+       "1306      saether\n",
+       "1307         ware\n",
+       "1308        peter\n",
+       "Name: First Name, Length: 1309, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df[\"Name\"]\n",
-    "#df[\"First Name\"] = df[\"Name\"].apply(lambda x: first_name_extractor(x))"
+    "df[\"First Name\"] = df[\"Name\"].apply(lambda x: first_name_extractor(name=x))\n",
+    "df[\"First Name\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            owen\n",
+       "1            john\n",
+       "2           laina\n",
+       "3         jacques\n",
+       "4         william\n",
+       "          ...    \n",
+       "1304        woolf\n",
+       "1305      fermina\n",
+       "1306        simon\n",
+       "1307    frederick\n",
+       "1308      michael\n",
+       "Name: Last Name, Length: 1309, dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df[\"Last Name\"] = df[\"Name\"].last.apply(lambda x: last_name_extractor(x[2]))"
+    "df[\"Last Name\"] = df[\"Name\"].apply(lambda x: last_name_extractor(name=x))\n",
+    "df[\"Last Name\"]"
    ]
   },
   {
@@ -235,9 +620,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (3635271389.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [38]\u001b[0;36m\u001b[0m\n\u001b[0;31m    if age < 26:\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def age_to_ordinal(age: int) -> int:\n",
     "    if age < 26:"
